# web2_backend

./: .gitignore  README.md  app.py  cmd.sql  db.py  main.py  pyproject.toml  requirements.txt
