[tool.poetry]
name = "h4b-backend"
version = "0.1.0"
description = ""
authors = ["karmakarmeghdip <karmakarmeghdip@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.112.1"}
tensorflow = "^2.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
